--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -21,8 +21,11 @@ spec:
     metadata:
       annotations:
         checksum/secret: {{ include (print $.Template.BasePath "/secrets.yaml") . | sha256sum }}
-        prometheus.io/port: "9090"
+{{- if .Values.config.metrics.enabled }}
+        prometheus.io/path: /metrics
+        prometheus.io/port: {{ .Values.config.metrics.port | toString | quote }}
         prometheus.io/scrape: "true"
+{{- end }}
       labels:
         app.kubernetes.io/name: {{ include "matrix-media-repo.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
