--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -6,11 +6,11 @@ metadata:
 {{ include "matrix-media-repo.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: {{ include "matrix-media-repo.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "matrix-media-repo.selectorLabels" . | nindent 4 }}
