--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -5,4 +5,8 @@ metadata:
   name: {{ template "matrix-media-repo.serviceAccountName" . }}
   labels:
 {{ include "matrix-media-repo.labels" . | indent 4 }}
+  {{- with .Values.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end -}}
