--- a/Chart.yaml
+++ b/Chart.yaml
@@ -11,7 +11,7 @@ apiVersion: v2
 type: application
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: "v1.2.5"
+appVersion: "v1.2.6"
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 version: 1.0.2
@@ -25,6 +25,18 @@ home: https://github.com/matrix-org/synapse
 sources:
   - https://github.com/turt2live/matrix-media-repo
   - https://hub.docker.com/r/turt2live/matrix-media-repo
+  - https://github.com/halkeye-helm-charts/matrix-media-repo
 maintainers:
   - name: Gavin Mogan
     email: helm@gavinmogan.com
+annotations:
+  artifacthub.io/changes: |
+    - Bump app version to 1.2.6
+    - Populate artifact hub changelog and images
+    - Fix readme generation
+    - Update ingress to newer Kind to remove deprecated warnings
+    - fix bug with helm's skip deleting pvc annotation
+  artifacthub.io/containsSecurityUpdates: "false"
+  artifacthub.io/images: |
+    - name: matrix-media-repo
+      image: turt2live/matrix-media-repo:v1.2.5
