--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,10 +1,13 @@
 {{- if .Values.ingress.enabled -}}
+{{- $kubeTargetVersion := default .Capabilities.KubeVersion.GitVersion .Values.kubeTargetVersionOverride }}
 {{- $fullName := include "matrix-media-repo.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+{{- if semverCompare ">=1.19-0" $kubeTargetVersion -}}
+apiVersion: networking.k8s.io/v1
+{{- else if semverCompare ">=1.14-0" $kubeTargetVersion -}}
 apiVersion: networking.k8s.io/v1beta1
 {{- else -}}
-apiVersion: extensions/v1beta1
+apiVersion: {{ .Values.controller.ingress.apiVersion }}
 {{- end }}
 kind: Ingress
 metadata:
@@ -33,7 +36,15 @@ spec:
         paths:
           - path: /_matrix/media
             backend:
+            {{- if semverCompare ">=1.19-0" $kubeTargetVersion }}
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: {{ $svcPort }}
+            pathType: Prefix
+            {{- else -}}
               serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
+            {{- end }}
   {{- end }}
 {{- end }}
